--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <div class="sidebar">
             <!-- Logo区域 -->
             <div style="text-align: center; margin-bottom: 20px; padding: 20px 15px; background: white; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-                <img src="/xiaohongshu-editor/logo.png" alt="小红书知识卡片编辑器" style="width: 180px; height: auto; max-height: 180px; object-fit: contain; display: block; margin-left: auto; margin-right: auto;">
+                <img src="logo.png" alt="小红书知识卡片编辑器" style="width: 180px; height: auto; max-height: 180px; object-fit: contain; display: block; margin-left: auto; margin-right: auto;">
             </div>
             <h2>🛠️ 创作助手</h2>
             <div class="template-item active" data-template="knowledge">
